<resources>
    <string name="app_name">DeliveryManagementSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_order">Order</string>
    <string name="menu_help">help</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_aboutUs">About us</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="img_login">img_login</string>
    <string name="main_text">Ecommerce Login</string>
    <string name="second_text">Ecommerce System</string>
    <string name="btn_get_started_title">Get Started</string>
    <string name="edt_email">User</string>
    <string name="edt_password">Password</string>
    <string name="sign_b_in_b">Sign <b>In</b></string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="Registration">Registration</string>

    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="invoice_address">Address</string>
    <string name="rejoin">Edit</string>
    <string name="add">Add</string>
    <string name="print">Print</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Detail">Detail</string>

    <string name="sample_date">20-01-2021</string>
    <string name="title_home">Home</string>
    <string name="title_Search">Search</string>
    <string name="title_Cart">Cart</string>
    <string name="title_Wishlist">Wishlist</string>
    <string name="title_Profile">Profile</string>

</resources>