<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/menu_order" />

        <item
        android:id="@+id/nav_help"
        android:icon="@drawable/help"
        android:title="@string/menu_help" />

        <item
        android:id="@+id/nav_suggestions"
        android:icon="@drawable/suggestion"
        android:title="@string/menu_suggestions" />

        <item
        android:id="@+id/nav_aboutUs"
        android:icon="@drawable/about"
        android:title="@string/menu_aboutUs" />

        <item
        android:id="@+id/nav_logOut"
        android:icon="@drawable/logout"
        android:title="@string/menu_logout" />


    </group>
</menu>
